openshift/configs/db/vs-egress-db-si.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-egress-db-si
spec:
  exportTo:
    - .
  gateways:
    - mesh
    - gw-si-tcp
  hosts:
    - ${SI_DB_HOST}
  tcp:
    - match:
        - gateways:
            - mesh
          port: ${DB_SI_TCP_PORT}
      route:
        - destination:
            host: svc-egressgateway
            port:
              number: ${DB_SI_TCP_PORT}
          weight: 100
    - match:
        - gateways:
            - gw-si-tcp
          port: ${DB_SI_TCP_PORT}
      route:
        - destination:
            host: ${SI_DB_HOST}
            port:
              number: ${DB_PORT}
          weight: 100
